tests/udn_with_ingress_controller/ingress_multiple_rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-world
  namespace: green
spec:
  rules:
  - host: ingress.nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8090
  - host: ingress-2.nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8000
